--- a/src/assets/appstyle/header.module.css
+++ b/src/assets/appstyle/header.module.css
@@ -59,19 +59,22 @@ header{
 
 }
 
-.distribution{
+.iconBlock .distribution{
     height: 60%;
     border-left: 1.5px solid black;
 }
 
-.btn{
+.iconBlock .btn{
     height: 100%;
     display: flex;
     align-items: center;
     position: relative;
 }
+.iconBlock .btn > a{
+    display: flex;
+}
 
-.btn:hover {
+.iconBlock .btn:hover {
     color: #008ECC;
 }
 
@@ -110,7 +113,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
-    top: 0.5vw;
+    top: 0.6vw;
     right: -0.5vw;
 }
 
