--- a/src/assets/appstyle/loading.module.css
+++ b/src/assets/appstyle/loading.module.css
@@ -11,54 +11,50 @@
 
 
 .loader {
+    text-align: center;
+    --effect: hover 1s linear infinite;
+}
+
+
+.container .loader >  p {
     display: inline-block;
-    vertical-align: middle;
-    position: relative;
-    margin: 10px;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 1.5em;
+    font-family: arial;
+    font-weight: 600;
+    transform: scale(.5);
+    color: #008ECC;
+
 }
 
-@keyframes loader {
-    from {
-        transform: rotate(0);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+
+
+.container .loader > p:nth-child(1) {
+    animation: var(--effect);
 }
 
-.loader {
-    width: 0;
-    padding-bottom: 20px;
-    border-top: 20px solid black;
-    border-left: 14px solid transparent;
-    border-right: 14px solid transparent;
-    border-radius: 14px / 10px;
-    transform-origin: 50% 50%;
-    animation: loader 1s linear infinite;
+.container .loader > p:nth-child(2) {
+    animation: var(--effect) .125s;
 }
 
-.loader:before,
-.loader:after {
-    content: '';
-    position: absolute;
+.container .loader > p:nth-child(3) {
+    animation: var(--effect) .25s;
 }
 
-.loader:before {
-    top: 0;
-    left: 0;
-    border-bottom: 20px solid black;
-    border-left: 14px solid transparent;
-    border-right: 14px solid transparent;
-    border-radius: 14px / 10px;
-    transform: translate(-50%);
+.container .loader > p:nth-child(4) {
+    animation: var(--effect) .375s;
 }
 
-.loader:after {
-    top: -3px;
-    left: -3px;
-    width: 6px;
-    height: 6px;
-    border-radius: 3px;
-    background: black;
-    animation: loader-center 1s linear infinite alternate;
+.container .loader > p:nth-child(5) {
+    animation: var(--effect) .5s;
 }
+
+.container .loader > p:nth-child(6) {
+    animation: var(--effect) .675s;
+}
+
+.container .loader > p:nth-child(7) {
+    animation: var(--effect) .75s;
+}
+
