--- a/src/assets/appstyle/product.module.css
+++ b/src/assets/appstyle/product.module.css
@@ -72,6 +72,7 @@
     margin-left: 40px; 
 }
 
+/*------------------------------CLASSIFY------------------------------*/
 .main-menu .list .classify{
     width: 95%;
     background-color: white;
@@ -88,7 +89,8 @@
 .classify .detail-item {
     display: flex;
     flex-direction: row;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
+    align-items: center;
 }
 
 .classify .detail-item .title{
@@ -96,6 +98,10 @@
     margin-left: 20px;
     font-size: 1.5rem;
     height: auto;
+    margin-right: 10px;
+    padding-left: 10px;
+    /* background-color: #999999; */
+    
 }
 
 .classify .detail-item .list-atribute{
@@ -105,7 +111,6 @@
     flex-wrap: wrap;
     row-gap: 10px;
 }
-
 
 .classify .detail-item .name-classify{
     text-align: center;
@@ -119,11 +124,11 @@
     cursor: pointer;
 }
 
-
 .classify .detail-item .name-classify:hover{
     background-color: rgba(134, 7, 7, 0.411);
 }
 
+/*____________________________________________________________________*/
 
 .main-menu .list .sort{
     width: 95%;
@@ -153,21 +158,21 @@
     line-height: 20px;
 }
 
-
+/*----------------------------LIST PRODUCT----------------------------*/
 
 .main-menu .list .list-product{
     width: 95%;
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 30px;
-    gap: 56px;
+    gap: 2%;
 }
 
 .list-product .product{
-    width: 30%;  
+    width: 23.5%;  
     border: 1px solid whitesmoke;
-    border-radius: 10px;
-    margin-top: 40px;
+    border-radius: 5px;
+    margin-top: 30px;
     box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
     
 }
@@ -177,7 +182,7 @@
     display: flex;
     justify-content: center;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .product-link-detail {
@@ -187,12 +192,12 @@
 
 
 .list-product .product .product-container .product-image{
-    border-radius: 10px;
+    border-radius: 7px;
     width: 12vw;
     height: 12vw;
 }
 
-.product-container .btn-compare {
+/* .product-container .btn-compare {
     height: 50px;    
     color: rgb(12, 2, 2);
     font-size: 1.5rem;
@@ -206,7 +211,7 @@
     margin-left: 40px;
     margin-right: 15px;
     border:1px solid #999999; 
-}
+} */
 
 
 .list-product .product .infor-product{
@@ -216,29 +221,29 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .infor-product .caption {
-    padding: 20px;
-
+    padding: 0 10px;
+    width: 90%;
+    margin: auto;
 }
 
 .infor-product .name-product{
     overflow: hidden;
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
-    font-size: 20px;
+    -webkit-line-clamp: 2;
+    font-size: 15px;
     font-weight: 600;
 }
 
-
 .infor-product .price-product{
-    font-size: 2rem;
-    text-align: center;
-    margin-top: 15px;   
-    color: red;
+    font-size: 1.7rem;
+    text-align: center;  
+    color: rgb(20, 53, 195);
+    font-weight: 600;
 }
 
 
@@ -248,7 +253,6 @@
     align-items: center;
     color: #000;
     font-weight: bold;
-    margin-top: 15px;
     margin-bottom: 20px;
     
 }
@@ -266,6 +270,9 @@
 .infor-product .btn-addProduct > button > p{
     margin-top: 15px;
 }
+
+/*____________________________________________________________________*/
+
 
 .list .padination{
     position: relative;
