--- a/src/assets/appstyle/productdetail.module.css
+++ b/src/assets/appstyle/productdetail.module.css
@@ -124,7 +124,7 @@
 .info-product .price {
     color: red;
     font-size: 3rem;
-    font-weight: 400;
+    font-weight: 600;
     line-height: 3rem;
     margin-top: 30px;
 
@@ -137,13 +137,17 @@
     border-radius: 30px;
     margin: 20px 100px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
 
-.add-to-cart p {
+.add-to-cart > p {
     color: black;
     font-size: 1.5rem;
     font-weight: 600;
+    margin: 0;
 }
 
 .container-detail {
@@ -160,46 +164,29 @@
 .desc-detail {
     max-width: 1200px;
     height: 100%;
-    margin-left: auto;
-    margin-right: auto;
     box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
-
 }
 
-.desc-detail .title {
-    display: flex;
-    justify-content: center;
-    padding-top: 20px;
-    margin-bottom: 20px;
-}
 
 .desc-detail table {
-    width: 100%;
-    border-collapse: collapse;
     letter-spacing: 1px;
-    display: table;
 }
 
-.desc-detail tbody {
+/* .desc-detail tbody {
     display: table-row-group;
     vertical-align: middle;
-}
+} */
 
-.desc-detail .row {
-    border-bottom: 1px solid#6c757d;
-    margin-bottom: 30px;
-    vertical-align: middle;
 
-}
-.desc-detail .row:last-child{
+/* .desc-detail .row:last-child{
     border-bottom-width: 0;
-}
+} */
 
-.desc-detail .row th td {
+/* .desc-detail .row th td {
     padding-top: 10px;
     padding-bottom: 20px;
 
-}
+} */
 
 .desc-detail .row th {
     text-transform: uppercase;
